--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "voro",
   "version": "0.1.0",
   "description": "Mock smarter, not harder.",
-  "bin": {
-    "voro": "./dist/index.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "prepare": "npm run build"
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "keywords": [
     "mock",
     "api",
@@ -20,7 +15,7 @@
     "cli",
     "developer-tools"
   ],
-  "author": "Brandon Burning <bnburning3@gmail.com>",
+  "author": "Brandon Burning <brando@brando.wtf> (http://brandonburning.com)",
   "homepage": "https://github.com/caressingbeast/voro",
   "repository": {
     "type": "git",
@@ -31,17 +26,11 @@
     "node": ">=18.0.0"
   },
   "type": "module",
-  "exports": {
-    ".": "./dist/index.js"
-  },
   "files": [
     "dist",
-    "README.md",
-    "LICENSE"
+    "LICENSE",
+    "README.md"
   ],
   "dependencies": {},
-  "devDependencies": {
-    "typescript": "^5.4.0",
-    "ts-node": "^10.9.1"
-  }
+  "devDependencies": {}
 }
