--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,9 @@
     "ts-json-schema-generator": "^2.4.0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.25.64",
+    "zod-to-json-schema": "^3.24.5"
   },
   "bin": {
     "voro": "dist/index.js"
