--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
   "name": "voro",
-  "version": "0.1.0",
-  "description": "Mock smarter, not harder.",
-  "workspaces": [
-    "packages/*"
-  ],
-  "keywords": [
-    "mock",
-    "api",
-    "typescript",
-    "zod",
-    "schema",
-    "faker",
-    "cli",
-    "developer-tools"
-  ],
-  "author": "Brandon Burning <brando@brando.wtf> (http://brandonburning.com)",
-  "homepage": "https://github.com/caressingbeast/voro",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsx src/cli.ts",
+    "start": "node ./dist/cli.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/caressingbeast/voro.git"
+    "url": "git+https://github.com/caressingbeast/voro.git"
   },
+  "keywords": [],
+  "author": "Brandon Burning <brando@brando.wtf> (http://brandonburning.com)",
   "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "type": "module",
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
-  "dependencies": {},
-  "devDependencies": {}
+  "bugs": {
+    "url": "https://github.com/caressingbeast/voro/issues"
+  },
+  "homepage": "https://github.com/caressingbeast/voro#readme",
+  "devDependencies": {
+    "@types/node": "^24.0.3",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.8.0",
+    "chalk": "^5.4.1",
+    "commander": "^14.0.0",
+    "zod": "^3.25.67"
+  }
 }
