--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "dist",
     "moduleResolution": "node",
     "removeComments": false
   },
   "include": [
-    "src"
+    "src/**/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "node_modules"
