--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "voro",
-  "version": "1.0.2",
-  "description": "",
-  "main": "dist/cli.js",
+  "version": "1.0.3",
+  "description": "Mock smarter, not harder.",
   "bin": {
     "voro": "dist/cli.js"
   },
